--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     {% block head %}
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../static/css/style.css"/>
+    <link rel="stylesheet" href="../static/css/appstyle.css"/>
     <title>{% block title %}{% endblock %} - Syömään!</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     {% endblock %}
@@ -17,9 +17,16 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link" href="/signup">Rekisteröidy</a>
-            <a class="nav-item nav-link" href="/login">Kirjaudu</a>
-            <a class="nav-item nav-link" href="/logout">Kirjaudu ulos</a>
+            {% if not current_user.is_authenticated %}
+            <a class="nav-item nav-link" href="{{ url_for('signup') }}">Rekisteröidy</a>
+            <a class="nav-item nav-link" href="{{ url_for('login') }}">Kirjaudu</a>
+            {% endif %}
+            {% if current_user.is_authenticated %}
+            <a class="nav-item nav-link" href="{{ url_for('profile') }}">Profiili</a>
+            <a class="nav-item nav-link" href="{{ url_for('add_recipe') }}">Lisää resepti</a>
+            <a class="nav-item nav-link" href="{{ url_for('plan') }}">Viikkosuunnitelma</a>
+            <a class="nav-item nav-link" href="{{ url_for('logout') }}">Kirjaudu ulos</a>
+            {% endif %}
         </div>
     </div>
 </div>
