--- a/app/templates/logged_in.html
+++ b/app/templates/logged_in.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
-{% block title %}Kirjaudu{% endblock %}
+{% block title %}Tervetuloa{% endblock %}
 {% block head %}
     {{ super() }}
 {% endblock %}
 {% block content %}
     {{ super() }}
 
+<p>Olet nyt kirjautunut sisään, {{ name }}!</p>
 
 {% endblock %}
