Neljäs versio: - Usean ainesosan lisäys onnistuu ja resepti tallentuu nyt tietokantaan kokonaisuudessaan. - Lisätty myös template reseptin muokkausta varten. Itse muokkausominaisuus vielä työn alla.

--- a/app/static/css/appstyle.css
+++ b/app/static/css/appstyle.css
@@ -21,6 +21,7 @@ form {
 
 input {
     width: 50%;
+    margin: 30px;
 }
 
 footer {
@@ -41,4 +42,8 @@ h2 {
 
 #remember label {
     padding-left: 0.4em;
+}
+
+#helper {
+    text-align: justify;
 }
