--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,10 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="../static/css/appstyle.css"/>
     <title>{% block title %}{% endblock %} - Syömään!</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
     {% endblock %}
 </head>
 <body>
