--- a/app/templates/modify.html
+++ b/app/templates/modify.html
@@ -2,58 +2,36 @@
 {% block title %}Muokkaa reseptiä{% endblock %}
 {% block head %}
     {{ super() }}
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js" xmlns="http://www.w3.org/1999/html"></script>
+<script src="../static/js/script-mod.js"></script>
 {% endblock %}
 {% block content %}
     {{ super() }}
     <h3>Muokkaa reseptiä: {{recipe.recipe_name}}</h3>
 
         <form id="recipe_form">
-            <p><label for="name">Reseptin nimi: </label>
-            <input type="text" id="name" name="name" value="{{recipe.recipe_name}}"/></p>
+            <p><label for="rec_name">Reseptin nimi: </label>
+            <input type="text" id="rec_name" name="rec_name" value="{{recipe.recipe_name}}"/></p>
 
-            <p><label for="ingredients">Ainesosat: </label>
-            <input type="text" id="ingredients" name="ingredients" value="{% for ingredient in recipe['ingredients'] %}
-                        {{ingredient['quantity']}} {{ingredient['measuring_unit']}} {{ingredient['ingredient']}}
-                    {% endfor %}" /></p>
+            <p>Ainesosat:</p>
+            {% for ingredient in recipe['ingredients'] %}
+            {% set elemId = range(1, 4000) | random %}
+             <input type="text" id="mod_quantity{{elemId}}" name="quantity" value="{{ingredient['quantity']}}" />
+            <input type="text" id="mod_measuring_unit{{elemId}}" name="measuring_unit" value="{{ingredient['measuring_unit']}}"/>
+            <input type="text" id="mod_ingredient{{elemId}}" name="ingredient" value="{{ingredient['ingredient']}}" /><br>
+            {% endfor %}
+            <input type="hidden" id="recipe_id" name="recipe_id" value="{{recipe.id}}"/>
 
-            <p><label for="instructions">Ohje: </label>
+            <div id="moreIngredients"></div>
+
+            <button type="button" id="addIngredient" class="btn btn-primary" value="Lisää uusi ainesosa!"></button><br><br>
+            <input type="button" id="saveIngredients" class="btn btn-primary" value="Tallenna ainesosat" />
+
+            <p><label for="instructions">Valmistusohje: </label><br>
             <input type="text" id="instructions" name="instructions" value="{{recipe.description}}" /></p>
 
-            <p><input type="submit" id="submit" value="Tallenna" onclick="return confirm_alert(this)"/></p>
+            <p><input type="button" id="mod_submit" class="btn btn-primary" value="Tallenna resepti!"/></p>
         </form>
-<script>
 
-    let form = document.getElementById("student_form")
-
-    form.addEventListener("submit", function(e) {
-        e.preventDefault();
-        let data = new FormData(form);
-
-        axios({
-                method: "put",
-                url: "/",
-                data: data,
-                header: {"Content-Type": "application/json"
-                }
-        })
-        .then(function(response) {
-            console.log("Response, data = " + response.data)
-
-            if (response.status === 200) {
-                form.reset()
-                window.location = "/";
-            }
-        })
-        .catch(function (response) {
-            console.log(response);
-        })
-    })
-
-    function confirm_alert() {
-        return confirm("Resepti päivitetty!")
-    }
-
-</script>
 
 {% endblock %}
