--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,36 +5,36 @@
 {% endblock %}
 {% block content %}
     {{ super() }}
-<div id="content">
-<p>Tervetuloa katselemaan ja luomaan reseptejä.</p>
-<p>Löydä itsellesi ja perheellesi sopivat reseptit ja lisää ne viikkosuunnitelmaan.</p>
-<p>Luo viikkosuunnitelman perusteella ostoslista.</p>
+<div id="intro">
+    <h1>Tervetuloa katselemaan ja luomaan reseptejä.</h1><br>
+<p>Löydä itsellesi ja perheellesi sopivat reseptit ja lisää ne omaan viikkosuunnitelmaasi.<br>
+Viikkosuunnitelma-sivulla näet automaattisesti luodun ostoslistan, joka sisältää koko viikon ostokset!</p><br></div>
 
 
-    {% if recipes|length > 0 %}
-        {% for recipe in recipes %}
-        <table id="allRecipes">
-        <tr id="recipe">
-            <th id="name">{{recipe.recipe_name}}</th>
-            <th>Ainesosat:</th>
-            <td id="ingredients">{% endfor %}
-                {% for recipe in recipes %}
-                    {% for ingredient in recipe['ingredients'] %}
+<div class="container">
+            {% if recipes|length > 0 %}{% for recipe in recipes %}
+    <div class="item rounded">
+            <h2 id="name" style="font-weight: bold">{{recipe.recipe_name}}</h2>
+            <p style="font-weight: bold">Ainesosat:</p>
+            <p>{% for ingredient in recipe['ingredients'] %}
                         {{ingredient['quantity']}} {{ingredient['measuring_unit']}} {{ingredient['ingredient']}}<br>
-                    {% endfor %}
-                {% endfor %}</td>
-            <th>Ohje:</th>
-            <td id="description">{% for recipe in recipes %}
-                {{recipe.description}} </td>
+                {% endfor %}</p>
+            <p style="font-weight: bold">Ohje:</p>
+            <p id="description">
+                {{recipe.description}} </p>
             {% if recipe.creator == current_user.email %}
-            <td><a href="{{ url_for('prepare_delete', recipe_name=recipe['recipe_name'])}}">Poista</a></td>
-            <td><a href="{{ url_for('modify', recipe_name=recipe['recipe_name'])}}">Muokkaa</a></td>
+            <p><a href="{{ url_for('prep_delete', recipe_name=recipe['recipe_name'])}}">Poista</a></p>
+            <p><a href="{{ url_for('modify', recipe_name=recipe['recipe_name'])}}">Muokkaa</a></p>
             {% endif %}
             {% if current_user.is_authenticated %}
-            <td><a href="">Lisää viikkosuunnitelmaan</a></td>
-            {% endif %}{% endfor %}
+            <input type="hidden" id="recipe_id" name="recipe_id" value="{{recipe.id}}"/>
+            <p><a href="{{ url_for('prep_add_plan', recipe_name=recipe['recipe_name'])}}">Lisää viikkosuunnitelmaan</a></p><br>
+            {% endif %}{% endfor %}<br></div>
         {% else %}
         <h3>Ei vielä reseptejä! <a href="{{ url_for('add_recipe')}}">Lisää ensimmäinen!</a></h3>
-        {% endif %}</tr></table>
+        {% endif %}
+
 </div>
+
+
 {% endblock %}
