--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -5,13 +5,16 @@
 {% endblock %}
 {% block content %}
     {{ super() }}
-<h2>Tervetuloa, {{ name }}!</h2>
 
-<p>Sähköpostiosoite: {{ current_user.email }} </p>
-<p>Jäsen {{ current_user.registration_time.strftime('%d.%m.%Y') }} alkaen</p>
-<p>Lisättyjä reseptejä: {{ user_recipes }}</p>
-<p>Katso tästä kaikki lisäämäsi reseptit</p> tähän siis linkki sivulle reseptit.html tai vastaavaa, ja pitäis olla tagi
-jotenkin että se on tämän käyttäjän lisäämä
-<p><a href="{{ url_for('plan') }}">Oma viikkosuunnitelma</a></p>
+<div class="row">
+    <div class="flex-sm-column"></div>
+    <div class="flex-lg-column rounded">
+<h1>Tervetuloa, {{ name }}!</h1><br><br>
 
+<p style="text-align: center">Sähköpostiosoite: {{ current_user.email }} <br><br>
+Jäsen {{ current_user.registration_time.strftime('%d.%m.%Y') }} alkaen <br><br>
+Lisättyjä reseptejä: {{ user_recipes }} <br><br>
+<a href="{{ url_for('plan') }}">Näytä viikkosuunnitelma</a></p></div>
+    <div class="flex-sm-column"></div>
+</div>
 {% endblock %}
