--- a/app/templates/plan.html
+++ b/app/templates/plan.html
@@ -5,8 +5,140 @@
 {% endblock %}
 {% block content %}
     {{ super() }}
+<style>
+    table, th, td {
+        border: 1px solid black;
+        height: 50px;
+    }
+
+    .mydiv {
+      position: absolute;
+      z-index: 9;
+      background-color: #f1f1f1;
+      text-align: center;
+      border: 1px solid #d3d3d3;
+    }
+
+    .mydivheader {
+        padding: 10px;
+        cursor: move;
+        z-index: 10;
+        background-color: #2196f3;
+        color: #fff;
+    }
+</style>
 <h2>Viikkosuunnitelma - {{ name }}</h2>
 
+<button class="btn btn-outline-primary" id="printButton" onclick="window.print()">Tulosta tämä sivu</button>
 
+
+<div>
+    {% if recipes|length > 0 %}
+    <table>
+    <tr>
+        <th>Viikonpäivä</th>
+        <th>Resepti</th>
+
+    </tr>{% for recipe_added in recipes %}
+    <tr>
+        <td>tyhjää</td>
+        <td id="name">{{recipe_added}} <a href="{{ url_for('delete_from_plan', recipe_name=recipe_added)}}">Poista</a>
+        {% endfor %}</td>
+
+
+    </table>
+
+    <div id="ostoslista">
+        <h4>Ostoslista</h4>
+        <p>Näitä reseptejä varten tarvitset yhteensä:</p>
+        <p>{% for key, value in final_list.items() %}
+        {{value.quantity}} {{value.measuring_unit}} {{value.ingredient}}<br>
+        {% endfor %}</p>
+
+    </div>
+        {% else %}
+        <p>Et ole vielä lisännyt viikkosuunnitelmaasi yhtään reseptiä.
+            <a href="{{ url_for('home')}}">Palaa etusivulle lisätäksesi reseptejä.</a></p>
+        {% endif %}</tr></table>
+</div>
+
+<div class="mydiv">
+      <div class="mydivheader">Maanantai</div>
+    </div>
+<div class="mydiv">
+      <div class="mydivheader">Tiistai</div>
+    </div>
+<div class="mydiv">
+      <div class="mydivheader">Keskiviikko</div>
+    </div>
+<div class="mydiv">
+      <div class="mydivheader">Torstai</div>
+    </div>
+<div class="mydiv">
+      <div class="mydivheader">Perjantai</div>
+    </div>
+<div class="mydiv">
+      <div class="mydivheader">Lauantai</div>
+    </div>
+<div class="mydiv">
+      <div class="mydivheader">Sunnuntai</div>
+    </div>
+
+<script>
+      //Make the DIV element draggable:
+      var offset = 5;
+      var mydivs = document.getElementsByClassName("mydiv");
+      for (var i = 0; i < mydivs.length; i++) {
+        dragElement(mydivs[i]);
+        mydivs[i].style.left = offset + "px";
+        offset = offset + mydivs[i].offsetWidth + 5;
+      }
+
+      function dragElement(elmnt) {
+        var pos1 = 0,
+          pos2 = 0,
+          pos3 = 0,
+          pos4 = 0;
+        if (elmnt.getElementsByClassName("mydivheader")[0]) {
+          /* if present, the header is where you move the DIV from:*/
+          elmnt.getElementsByClassName(
+            "mydivheader"
+          )[0].onmousedown = dragMouseDown;
+        } else {
+          /* otherwise, move the DIV from anywhere inside the DIV:*/
+          elmnt.onmousedown = dragMouseDown;
+        }
+
+        function dragMouseDown(e) {
+          e = e || window.event;
+          e.preventDefault();
+          // get the mouse cursor position at startup:
+          pos3 = e.clientX;
+          pos4 = e.clientY;
+          document.onmouseup = closeDragElement;
+          // call a function whenever the cursor moves:
+          document.onmousemove = elementDrag;
+        }
+
+        function elementDrag(e) {
+          e = e || window.event;
+          e.preventDefault();
+          // calculate the new cursor position:
+          pos1 = pos3 - e.clientX;
+          pos2 = pos4 - e.clientY;
+          pos3 = e.clientX;
+          pos4 = e.clientY;
+          // set the element's new position:
+          elmnt.style.top = elmnt.offsetTop - pos2 + "px";
+          elmnt.style.left = elmnt.offsetLeft - pos1 + "px";
+        }
+
+        function closeDragElement() {
+          /* stop moving when mouse button is released:*/
+          document.onmouseup = null;
+          document.onmousemove = null;
+        }
+      }
+</script>
 
 {% endblock %}
