--- a/app/templates/add_to_plan.html
+++ b/app/templates/add_to_plan.html
@@ -5,27 +5,31 @@
 {% endblock %}
 {% block content %}
     {{ super() }}
-<h2>Lisätäänkö {{ recipe_name }} viikkosuunnitelmaan?</h2>
+<div class="row">
+    <div class="flex-sm-column"></div>
+    <div class="flex-lg-column rounded">
 
-    <table>
-        <tr>
-            <td>{{recipe.recipe_name}}</td>
-            <td>
-                {% for ingredient in recipe['ingredients'] %}
+<h1>Lisätäänkö {{ recipe_name }} viikkosuunnitelmaan?</h1><br>
+        <div class="links">
+        <a class="del" href="{{url_for('added_to_plan', recipe_name=recipe['recipe_name'])}}"
+       onclick="return confirm_alert(this)">Lisää resepti viikkosuunnitelmaan</a><br><br>
+        <a class="del" href="{{url_for('home')}}">Palaa etusivulle</a><br><br></div>
+            <h6>{{recipe.recipe_name}}</h6><br>
+
+                <p style="text-align: center">{% for ingredient in recipe['ingredients'] %}
                 {{ingredient['quantity']}} {{ingredient['measuring_unit']}} {{ingredient['ingredient']}}<br>
-                {% endfor %}</td>
-            <td>{{recipe.description}}</td>
-        </tr>
+                {% endfor %}</p><br>
 
-    </table><br>
+            <p>{{recipe.description}}</p><br>
 
-    <a class="del" href="{{url_for('added_to_plan', recipe_name=recipe['recipe_name'])}}"
-       onclick="return confirm_alert(this)">Lisää</a>
-    <a class="del" href="{{url_for('home')}}">Palaa etusivulle</a>
+
+    <div class="flex-sm-column"></div>
+    </div></div>
 <script>
     function confirm_alert() {
         return confirm("Resepti lisätty viikkosuunnitelmaan!")
     }
+
 </script>
 
 {% endblock %}
