--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,14 +15,14 @@
     {% endblock %}
 </head>
 <body>    {% block content %}
-<nav class="navbar navbar-light fixed-top navbar-expand-lg" style="background-color: bisque;">
+<nav class="navbar navbar-light fixed-top navbar-expand-lg" style="background-color: navajowhite;">
     <div class="container-fluid"><a class="navbar-brand" href="/"><img src="../static/syomaannew.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
             aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav" style="font-size: larger">
             {% if not current_user.is_authenticated %}
             <a class="nav-item nav-link" href="{{ url_for('signup') }}">Rekisteröidy</a>
             <a class="nav-item nav-link" href="{{ url_for('login') }}">Kirjaudu</a>
