--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,16 +5,16 @@
 {% endblock %}
 {% block content %}
     {{ super() }}
-<div id="intro">
-    <h1>Tervetuloa katselemaan ja luomaan reseptejä.</h1><br>
-<p>Löydä itsellesi ja perheellesi sopivat reseptit ja lisää ne omaan viikkosuunnitelmaasi.<br>
-Viikkosuunnitelma-sivulla näet automaattisesti luodun ostoslistan, joka sisältää koko viikon ostokset!</p><br></div>
+<div id="intro" class="rounded">
+    <h1 style="color: white">Tervetuloa katselemaan ja luomaan reseptejä.</h1><br>
+<p style="text-align: center; color: white;">Löydä itsellesi ja perheellesi sopivat reseptit ja lisää ne omaan viikkosuunnitelmaasi.<br>
+Viikkosuunnitelma-sivulla näet automaattisesti luodun ostoslistan, joka sisältää koko viikon ostokset!</p><br></div><br>
 
 
-<div class="container">
+<div class="row">
             {% if recipes|length > 0 %}{% for recipe in recipes %}
     <div class="item rounded">
-            <h2 id="name" style="font-weight: bold">{{recipe.recipe_name}}</h2>
+            <h4 id="name" style="font-weight: bold">{{recipe.recipe_name}}</h4>
             <p style="font-weight: bold">Ainesosat:</p>
             <p>{% for ingredient in recipe['ingredients'] %}
                         {{ingredient['quantity']}} {{ingredient['measuring_unit']}} {{ingredient['ingredient']}}<br>
@@ -29,7 +29,7 @@ Viikkosuunnitelma-sivulla näet automaattisesti luodun ostoslistan, joka sisält
             {% if current_user.is_authenticated %}
             <input type="hidden" id="recipe_id" name="recipe_id" value="{{recipe.id}}"/>
             <p><a href="{{ url_for('prep_add_plan', recipe_name=recipe['recipe_name'])}}">Lisää viikkosuunnitelmaan</a></p><br>
-            {% endif %}{% endfor %}<br></div>
+            </div>{% endif %}{% endfor %}<br>
         {% else %}
         <h3>Ei vielä reseptejä! <a href="{{ url_for('add_recipe')}}">Lisää ensimmäinen!</a></h3>
         {% endif %}
