--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,24 +13,27 @@
 </div>
 {% endif %}
 {% endwith %}
-<h2>Kirjaudu tästä</h2>
+<div class="row">
+    <div class="flex-sm-column"></div>
+    <div class="flex-lg-column rounded">
+<h2>Kirjaudu sisään</h2>
 <form action="" method="post">
     <div class="form-group">
         <label for="inputEmail"></label>
-        <input name="email" class="form-control" id="inputEmail" placeholder="Sähköpostiosoite">
+        <input type="text" name="email" class="form-control" id="inputEmail" placeholder="Sähköpostiosoite">
     </div>
     <div class="form-group">
         <label for="inputPassword"></label>
-        <input type="password" name="password" class="form-control" id="inputPassword" placeholder="Salasana">
+        <input type="password" name="password" class="form-control" id="inputPassword" placeholder="Salasana"><br>
     </div>
-    <div class="form-group">
-        <label for="remember"></label>
-            <input type="checkbox" id="remember">
-            Pidä minut kirjautuneena
-    </div>
+    <div class="remember" id="rememberMe">
+            <input type="checkbox" name="remember" id="remember">
+        <label for="remember">Pidä minut kirjautuneena</label>
+    </div><br>
 
     <button type="submit" class="btn btn-primary">Kirjaudu!</button>
 
 </form>
+    </div><div class="flex-sm-column"></div></div>
 
 {% endblock %}
