--- a/app/templates/modify.html
+++ b/app/templates/modify.html
@@ -8,21 +8,26 @@
 {% endblock %}
 {% block content %}
     {{ super() }}
-    <h3>Muokkaa reseptiä: {{recipe.recipe_name}}</h3>
+
+<div class="row">
+    <div class="flex-sm-column"></div>
+    <div class="flex-lg-column rounded">
+
+    <h1>Muokkaa reseptiä: {{recipe.recipe_name}}</h1>
 
         <form id="recipe_form">
-            <p><label for="rec_name">Reseptin nimi: </label>
-            <input type="text" id="rec_name" name="rec_name" value="{{recipe.recipe_name}}"/></p>
+            <p><label for="rec_name" style="font-weight: bold">Reseptin nimi: </label>
+            <input type="text" class=form-control id="rec_name" name="rec_name" value="{{recipe.recipe_name}}"/></p>
             <input type="hidden" id="recipe_id" name="recipe_id" value="{{recipe.id}}"/><br>
-            <p><label for="instructions">Valmistusohje: </label><br>
-            <textarea type="text" rows="10" cols="50" id="instructions" name="instructions" >{{recipe.description}}</textarea></p>
+            <p><label for="instructions" style="font-weight: bold">Valmistusohje: </label><br>
+            <textarea type="text" class="form-control" rows="10" cols="50" id="instructions" name="instructions" >{{recipe.description}}</textarea></p>
 
-            <p>Ainesosat:</p>
+            <p style="font-weight: bold; text-align: center">Ainesosat:</p>
 
 <div class="modifyIngredients">{% for ingredient in recipe['ingredients'] %}
-            <input type="text" class="mod_quantity" id="mod_quantity" name="quantity" value="{{ingredient['quantity']}}" />
-            <input type="text" class="measuring_unit" id="mod_measuring_unit" name="measuring_unit" value="{{ingredient['measuring_unit']}}"/>
-            <input type="text" class="ingredient" id="mod_ingredient" name="ingredient" value="{{ingredient['ingredient']}}" /><br>
+            <div class="addingr"><input type="text" style="width: 60px" class="form-control mod_quantity" id="mod_quantity" name="quantity" value="{{ingredient['quantity']}}" /></div>
+            <div class="addingr"><input type="text" style="width: 60px" class="form-control measuring_unit" id="mod_measuring_unit" name="measuring_unit" value="{{ingredient['measuring_unit']}}"/></div>
+            <div class="addingr"><input type="text" class="form-control ingredient" style="width: auto" id="mod_ingredient" name="ingredient" value="{{ingredient['ingredient']}}" /></div><br>
             <a href="{{ url_for('delete_ingredient', quantity=quantity, measuring_unit=measuring_unit, ingredient=ingredient, recipe_name=recipe.recipe_name)}}">Poista tämä ainesosa</a><br><br>
             {% endfor %}
 
@@ -30,23 +35,28 @@
 
 <div id="moreIngredients"> </div>
 
-            <button type="button" id="addIngredient" class="btn btn-primary" value="add" onclick="addInput()">Lisää uusi ainesosa!</button><br><br>
-           <p><input type="submit" id="submit" class="btn btn-primary" value="Tallenna resepti!" onclick="return confirm_alert(this)"/></p>
-
-</form>
+            <div id="modButtons">
+            <button type="button" id="addIngredient" class="btn btn-info" value="add" onclick="addInput()">Lisää uusi ainesosa!</button><br><br>
+           <input type="submit" id="submit" class="btn btn-primary" value="Tallenna resepti!" onclick="return confirm_alert(this)"/>
+</div>
+</form><div class="flex-sm-column"></div>
+    </div></div>
 <script>
 
     let num = 0;
 
+
     function addInput(){
         num++;
-        let newInput = '<label for="mod_quantity"></label>\n' +
-        '<input type="text" class="form-control" name="quantity" ' +
-        'id="mod_quantity'+num+'" placeholder="Määrä" >' +
-        '<label for="mod_measuring_unit"></label>'+
-        '<input type="text" class="form-control" name="measuring_unit" id="mod_measuring_unit'+num+'" placeholder="Yksikkö">' +
-        '<label for="mod_ingredient"></label>'+
-        '<input type="text" class="form-control" name="ingredient" id="mod_ingredient'+num+'" placeholder="Ainesosa" ><br>'
+        let newInput = '<div class="addingr"><label for="quantity"></label>\n' +
+        '<input type="text" class="form-control" style="width: 80px" name="quantity" ' +
+        'id="quantity1'+num+'" placeholder="Määrä"><small id="quantity" class="form-text text-muted">Esim. 1, 0.5, 2..</small></div> ' +
+        '<div class="addingr"><label for="measuring_unit"></label>'+
+        '<input type="text" class="form-control" style="width: 100px" name="measuring_unit" id="measuring_unit1'+num+'" ' +
+         'placeholder="Yksikkö"><small id="quantity" class="form-text text-muted">Esim. dl, tl, rkl...</small></div>' +
+        '<div class="addingr"><label for="ingredient"></label>'+
+        '<input type="text" class="form-control" name="ingredient" id="ingredient1'+num+'" ' +
+         'placeholder="Ainesosa"><small id="quantity" class="form-text text-muted">Esim. dl, tl, rkl...</small></div><br><br>' ;
         document.getElementById('moreIngredients').innerHTML += newInput;
     }
 
