--- a/app/templates/prep_delete.html
+++ b/app/templates/prep_delete.html
@@ -7,24 +7,24 @@
 
 {% block content %}
     {{ super() }}
-<h3>Poistetaanko tämä resepti?</h3><br>
-<h4>Resepti poistetaan myös viikkosuunnitelmasta.</h4>
 
-    <table>
-        <tr>
-            <td>{{recipe.recipe_name}}</td>
-            <td>
-                {% for ingredient in recipe['ingredients'] %}
+<div class="row">
+    <div class="flex-sm-column"></div>
+    <div class="flex-lg-column rounded">
+<h1>Poistetaanko tämä resepti?</h1><br>
+<h4>Resepti poistetaan myös viikkosuunnitelmasta.</h4><br>
+        <div class="links">
+        <a class="del" href="{{url_for('delete_recipe', recipe_name=recipe['recipe_name'])}}"
+       onclick="return confirm_alert(this)">Poista!</a><br><br>
+        <a class="del" href="{{url_for('home')}}">Peruuta ja palaa etusivulle</a><br><br></div>
+ <p style="font-weight: bold; text-align: center">{{recipe.recipe_name}}</p><br>
+                <p style="text-align: center">{% for ingredient in recipe['ingredients'] %}
                 {{ingredient['quantity']}} {{ingredient['measuring_unit']}} {{ingredient['ingredient']}}<br>
-                {% endfor %}</td>
-            <td>{{recipe.description}}</td>
-        </tr>
-
-    </table><br>
-
-    <a class="del" href="{{url_for('delete_recipe', recipe_name=recipe['recipe_name'])}}"
-       onclick="return confirm_alert(this)">Poista</a>
-    <a class="del" href="{{url_for('home')}}">Palaa etusivulle</a>
+                {% endfor %}</p><br>
+            <p style="text-align: justify">{{recipe.description}}</p><br>
+    </div>
+    <div class="flex-sm-column"></div>
+</div>
 <script>
     function confirm_alert() {
         return confirm("Resepti poistettu!")
